  Bugfixes:
    - Removed info icons from mod settings names as the game now generates them on its own
    - Fixed that tutorial tooltips would still show in some places even if disabled
    - Fixed a crash that could happen when duplicating a subfactory that had previously had a product pasted into it

---------------------------------------------------------------------------------------------------
Version: 1.1.51
Date: 16. 07. 2022
  Changes:
    - Changed the key combo for putting machines/beacons into the cursor in the main interface to Alt+Left-click to avoid accidental activation. issues.
    - Marking recipes as done in the compact subfactory view now grays them out
    - Duplicating a subfactory now inserts it right below the cloned subfactory instead of at the end
    - Improved performance of opening dialogs (thanks curiosity!)
    - Improved the wording around the utility dialog component buttons
  Bugfixes:
    - Fixed an issue where pasting onto a module could make it exceed the total module capacity of the machine
    - Fixed that the machine dialog would show the limit options even when the matrix solver was active
    - Fixed a crash when loading certain old saves
    - Fixed a very rare issue where the game could desync in multiplayer

---------------------------------------------------------------------------------------------------
Version: 1.1.50
Date: 05. 06. 2022
  Changes:
    - Added a command to restart translation in case it hangs; Type '/fp-restart-translation' into the console to run it
    - Changed it so the selected subfactory is retained during migrations if possible
  Bugfixes:
    - Fixed a few issues and crashes related to editing modules on machines and beacons
    - Fixed a couple of migration issues when trying to load certain old saves
    - Fixed a crash when loading a save where a now-invalid subfactory was selected
    - Fixed a crash when trying to put machines into the cursor that can't be blueprinted