@@ -16,6 +16,7 @@ Date: 00. 00. 0000
     - Removed info icons from mod settings names as the game now generates them on its own
     - Fixed that tutorial tooltips would still show in some places even if disabled
     - Fixed a crash that could happen when duplicating a subfactory that had previously had a product pasted into it
+    - Fixed a bug where a disabled slider to set module amounts would sometimes not actually be disabled
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.51
